setting dua database untuk dev dan test

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DB_USERS = your_users_name
 DB_HOST  = your_server_host
 DB_NAME  = your_database_name
+DB_TEST  = your_database_test_name
 DB_PASS  = your_password
 
 JWT_KEYS = your_JWT_password_keys
