--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "<h1 align=\"center\">RESTful API with Express</h1> <p align=\"center\"><img src=\"https://miro.medium.com/max/1400/0*RDbjFZxjwF_JQWz-.jpg\" width=\"400px\" alt=\"NodeJS.jpg\" /></p> <p align=\"center\">     <a href=\"https://en.wikipedia.org/wiki/Express.js\" target=\"blank\">More about Express</a> </p>",
   "main": "app.js",
   "scripts": {
-    "test": "jest --verbose",
-    "start": "nodemon server.js"
+    "test": "NODE_ENV=test jest --verbose",
+    "start": "NODE_ENV=dev nodemon server.js"
   },
   "keywords": [
     "express",
@@ -40,5 +40,8 @@
   "bugs": {
     "url": "https://github.com/wsaefulloh/additional-backend/issues"
   },
-  "homepage": "https://github.com/wsaefulloh/additional-backend#readme"
+  "homepage": "https://github.com/wsaefulloh/additional-backend#readme",
+  "directories": {
+    "test": "test"
+  }
 }
