--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ CLOUD_NAME = dyli6i0pw
 CLOUD_KEYS = 175621329729158
 CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 
-REDIS_HOST = localhost
+REDIS_HOST = 44.198.122.171
 REDIS_PASS = thereds12
