--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "<h1 align=\"center\">RESTful API with Express</h1> <p align=\"center\"><img src=\"https://miro.medium.com/max/1400/0*RDbjFZxjwF_JQWz-.jpg\" width=\"400px\" alt=\"NodeJS.jpg\" /></p> <p align=\"center\">     <a href=\"https://en.wikipedia.org/wiki/Express.js\" target=\"blank\">More about Express</a> </p>",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --verbose",
+    "test": "NODE_ENV=test jest --verbose --forceExit",
     "dev": "NODE_ENV=dev nodemon server.js",
     "start": "NODE_ENV=prod nodemon server.js"
   },
