--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.26.2",
     "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
