--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
-DB_USERS = wahyu
-DB_HOST  = localhost
-DB_NAME  = newproduct
-DB_PASS  = wahyu1234
+DB_USERS = devdb
+DB_HOST  = database
+DB_NAME  = devdb
+DB_PASS  = abcd1234
 
 JWT_KEYS = liverpool2011
 
@@ -9,5 +9,5 @@ CLOUD_NAME = dyli6i0pw
 CLOUD_KEYS = 175621329729158
 CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 
-REDIS_HOST = localhost
+REDIS_HOST = redis
 REDIS_PASS = thereds12
