--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USERS = admin
-DB_HOST  = 44.198.219.11
-DB_NAME  = dbtest
+DB_USERS = devdb
+DB_HOST  = database
+DB_NAME  = devdb
 DB_PASS  = abcd1234
 
 JWT_KEYS = liverpool2011
@@ -9,5 +9,5 @@ CLOUD_NAME = dyli6i0pw
 CLOUD_KEYS = 175621329729158
 CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 
-REDIS_HOST = 44.198.122.171
+REDIS_HOST = redis
 REDIS_PASS = thereds12
