--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ CLOUD_KEYS = 175621329729158
 CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 
 REDIS_HOST = redis
-REDIS_PASS = thereds12
+REDIS_PASS = abcd1234
