--- a/.env
+++ b/.env
@@ -1,7 +1,17 @@
-DB_USERS = devdb
-DB_HOST  = database
-DB_NAME  = devdb
-DB_PASS  = abcd1234
+DB_USERS_TEST = admin
+DB_HOST_TEST  = 44.198.219.11
+DB_NAME_TEST  = dbtest
+DB_PASS_TEST  = abcd1234
+
+DB_USERS_PROD = devdb
+DB_HOST_PROD  = database
+DB_NAME_PROD  = devdb
+DB_PASS_PROD  = abcd1234
+
+DB_USERS_DEV = wahyu
+DB_HOST_DEV  = localhost
+DB_NAME_DEV  = newproduct
+DB_PASS_DEV  = wahyu1234
 
 JWT_KEYS = liverpool2011
 
@@ -9,5 +19,11 @@ CLOUD_NAME = dyli6i0pw
 CLOUD_KEYS = 175621329729158
 CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 
-REDIS_HOST = redis
-REDIS_PASS = abcd1234
+REDIS_HOST_TEST = 44.198.122.171
+REDIS_PASS_TEST = thereds12
+
+REDIS_HOST_PROD = redis
+REDIS_PASS_PROD = abcd1234
+
+REDIS_HOST_DEV = localhost
+REDIS_PASS_DEV = thereds12
