--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ DB_HOST_TEST  = 44.198.219.11
 DB_NAME_TEST  = dbtest
 DB_PASS_TEST  = abcd1234
 
-DB_USERS_PROD = devdb
-DB_HOST_PROD  = database
-DB_NAME_PROD  = devdb
-DB_PASS_PROD  = abcd1234
+DB_USERS_PROD = wahyu
+DB_HOST_PROD  = 3.19.173.182
+DB_NAME_PROD  = blanjaws
+DB_PASS_PROD  = admin1234
 
 DB_USERS_DEV = wahyu
 DB_HOST_DEV  = localhost
@@ -22,7 +22,7 @@ CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 REDIS_HOST_TEST = 44.198.122.171
 REDIS_PASS_TEST = thereds12
 
-REDIS_HOST_PROD = redis
+REDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
 REDIS_PASS_PROD = abcd1234
 
 REDIS_HOST_DEV = localhost
