--- a/.env
+++ b/.env
@@ -3,10 +3,15 @@ DB_HOST_TEST  = 44.198.219.11
 DB_NAME_TEST  = dbtest
 DB_PASS_TEST  = abcd1234
 
+aDB_USERS_PROD = wahyu
+aDB_HOST_PROD  = 3.19.173.182
+aDB_NAME_PROD  = blanjaws
+aDB_PASS_PROD  = admin1234
+
 DB_USERS_PROD = wahyu
-DB_HOST_PROD  = 3.19.173.182
-DB_NAME_PROD  = blanjaws
-DB_PASS_PROD  = admin1234
+DB_HOST_PROD  = localhost
+DB_NAME_PROD  = newproduct
+DB_PASS_PROD  = wahyu1234
 
 DB_USERS_DEV = wahyu
 DB_HOST_DEV  = localhost
@@ -22,8 +27,11 @@ CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 REDIS_HOST_TEST = 44.198.122.171
 REDIS_PASS_TEST = thereds12
 
-REDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
-REDIS_PASS_PROD = abcd1234
+aREDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
+aREDIS_PASS_PROD = abcd1234
+
+REDIS_HOST_PROD = localhost
+REDIS_PASS_PROD = thereds12
 
 REDIS_HOST_DEV = localhost
 REDIS_PASS_DEV = thereds12
