--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ REDIS_HOST_TEST = 44.198.122.171
 REDIS_PASS_TEST = thereds12
 
 REDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
-REDIS_PASS_PROD = abcd1234
+aREDIS_PASS_PROD = abcd1234
 
 aREDIS_HOST_PROD = localhost
 aREDIS_PASS_PROD = thereds12
