--- a/.env
+++ b/.env
@@ -8,10 +8,15 @@ DB_HOST_PROD  = 3.19.173.182
 DB_NAME_PROD  = blanjaws
 DB_PASS_PROD  = admin1234
 
-aDB_USERS_PROD = wahyu
-aDB_HOST_PROD  = localhost
-aDB_NAME_PROD  = newproduct
-aDB_PASS_PROD  = wahyu1234
+aDB_USERS_PROD = devdb
+aDB_HOST_PROD  = database
+aDB_NAME_PROD  = devdb
+aDB_PASS_PROD  = abcd1234
+
+a1DB_USERS_PROD = wahyu
+a1DB_HOST_PROD  = localhost
+a1DB_NAME_PROD  = newproduct
+a1DB_PASS_PROD  = wahyu1234
 
 DB_USERS_DEV = wahyu
 DB_HOST_DEV  = localhost
@@ -27,11 +32,11 @@ CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 REDIS_HOST_TEST = 44.198.122.171
 REDIS_PASS_TEST = thereds12
 
-REDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
+aREDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
 aREDIS_PASS_PROD = abcd1234
 
-aREDIS_HOST_PROD = localhost
-aREDIS_PASS_PROD = thereds12
+REDIS_HOST_PROD = redis
+REDIS_PASS_PROD = thereds12
 
 REDIS_HOST_DEV = localhost
 REDIS_PASS_DEV = thereds12
