--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment-timezone": "^0.5.33",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "newrelic": "^8.4.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "redis": "^3.1.2",
