update new relic

--- a/.env
+++ b/.env
@@ -32,11 +32,11 @@ CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 REDIS_HOST_TEST = 44.198.122.171
 REDIS_PASS_TEST = thereds12
 
-aREDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
-aREDIS_PASS_PROD = abcd1234
+REDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
+REDIS_PASS_PROD = abcd1234
 
-REDIS_HOST_PROD = redis
-REDIS_PASS_PROD = thereds12
+aREDIS_HOST_PROD = redis
+aREDIS_PASS_PROD = thereds12
 
 REDIS_HOST_DEV = localhost
 REDIS_PASS_DEV = thereds12
