--- a/.env
+++ b/.env
@@ -13,10 +13,10 @@ aDB_HOST_PROD  = database
 aDB_NAME_PROD  = devdb
 aDB_PASS_PROD  = abcd1234
 
-a1DB_USERS_PROD = wahyu
-a1DB_HOST_PROD  = localhost
-a1DB_NAME_PROD  = newproduct
-a1DB_PASS_PROD  = wahyu1234
+aDB_USERS_PROD = wahyu
+aDB_HOST_PROD  = localhost
+aDB_NAME_PROD  = newproduct
+aDB_PASS_PROD  = wahyu1234
 
 DB_USERS_DEV = wahyu
 DB_HOST_DEV  = localhost
@@ -32,11 +32,14 @@ CLOUD_SECRETS = BSULFty9c0FpWvEwlerKYZX28Dk
 REDIS_HOST_TEST = 44.198.122.171
 REDIS_PASS_TEST = thereds12
 
-REDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
-REDIS_PASS_PROD = abcd1234
+aaREDIS_HOST_PROD = redis-service.wahyu.svc.cluster.local
+aaREDIS_PASS_PROD = abcd1234
 
 aREDIS_HOST_PROD = redis
 aREDIS_PASS_PROD = thereds12
+
+REDIS_HOST_PROD = localhost
+REDIS_PASS_PROD = thereds12
 
 REDIS_HOST_DEV = localhost
 REDIS_PASS_DEV = thereds12
