--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "newrelic": "^8.4.0",
+    "nodemon": "^2.0.14",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "redis": "^3.1.2",
